--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <textarea id="noteInput" placeholder="Write your note here..."></textarea>
         <div class="button-container">
             <div class="left-buttons">
-                <button id="addNoteButton" title="Add note to thread"><img src="add-note.png" alt="Add Note"></button>
-                <button id="saveThreadButton" title="Save thread"><img src="save-thread.png" alt="Save Thread"></button>
-                <button id="clearThreadButton" title="Clear thread"><img src="clear-thread.png" alt="Clear Thread"></button>
+                <button id="addNoteButton"><img src="Images/add-note.png" alt="Add Note"></button>
+                <button id="saveThreadButton"><img src="Images/save-thread.png" alt="Save Thread"></button>
+                <button id="clearThreadButton"><img src="Images/clear-thread.png" alt="Clear Thread"></button>
             </div>
             <div class="right-buttons">
-                <button id="reverseOrderButton" title="Reverse order of notes"><img src="reverse-order.png" alt="Reverse Order"></button>
+                <button id="reverseOrderButton"><img src="Images/reverse-order.png" alt="Reverse Order"></button>
             </div>
         </div>
         <div id="noteThread"></div>
